# EEE4022-Snow-Depth-Sensing

./: README.md
RP2040 Firmware/ADC_over_USB/: CMakeLists.txt  main.c
STM32l467 Firmware/Thesis_Nucleo_Firmware/: .cproject  .mxproject  .project  Thesis_Nucleo_Firmware Debug.launch  Thesis_Nucleo_Firmware.ioc
STM32l467 Firmware/Thesis_Nucleo_Firmware/Core/Inc/: VL53L1_functions.h
STM32l467 Firmware/Thesis_Nucleo_Firmware/Core/Src/: VL53L1_functions.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
STM32l467 Firmware/Thesis_Nucleo_Firmware/Debug/: Thesis_Nucleo_Firmware.elf  Thesis_Nucleo_Firmware.list  Thesis_Nucleo_Firmware.map  makefile  objects.list  sources.mk
STM32l467 Firmware/Thesis_Nucleo_Firmware/Debug/Core/Src/: VL53L1_functions.d  VL53L1_functions.su  main.d  main.su  stm32l4xx_hal_msp.su  stm32l4xx_it.su  subdir.mk
STM32l467 Firmware/Thesis_Nucleo_Firmware/Debug/Drivers/STM32L4xx_HAL_Driver/Src/: subdir.mk
STM32l467 Firmware/Thesis_Nucleo_Firmware/Debug/Src/: sensor_bsp.d  sensor_bsp.su  subdir.mk  uart.d
STM32l467 Firmware/Thesis_Nucleo_Firmware/Debug/VL53L1X_API/core/src/: subdir.mk  vl53l1_api.d  vl53l1_api.su  vl53l1_api_calibration.d  vl53l1_api_calibration.su  vl53l1_api_core.d  vl53l1_core.d  (+18 more)
STM32l467 Firmware/Thesis_Nucleo_Firmware/VL53L1X_API/core/src/: vl53l1_api.c  vl53l1_wait.c
STM32l467 Firmware/Thesis_Nucleo_Firmware/VL53L1X_API/platform/src/: vl53l1_platform.c  vl53l1_platform_init.c
Signal Processing Functions/: BPF_FIR.m  BPF_signals.m  get_distance_using_CC.m  get_distance_using_thresholding.m  thresholdPulseDetection.m
(+6 files in other folders)
